# cc-devtools

./: .gitignore  ACTIONS.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  SECURITY.md  _inject.js  _inject_favicon.js  install.bat  pyproject.toml  start-bridge.bat  使用说明.txt
.github/: pull_request_template.md
bridge/: file-actions.js  generate-icons.js  package-lock.json  package.json  permissions.js  project-scan.js  safety.js  server.js  static-files.js  workflows.js
cc_devtools/: __init__.py  __main__.py  cli.py  file_actions.py  project_scan.py  safety.py  server.py  workflows.py
docs/: DEMO_SCRIPT.md  GITHUB_GROWTH_CHECKLIST.md  QUICKSTART.md  USE_CASES.md
extension/: devtools.js  manifest.json
scripts/: generate-demo-assets.mjs  sync_panel.py
tests/: bridge_file_actions.test.mjs  bridge_permissions.test.mjs  bridge_project_scan.test.mjs  bridge_safety.test.mjs  bridge_static_files.test.mjs  bridge_workflows.test.mjs  panel_core.test.mjs  panel_evidence_core.test.mjs  panel_evidence_ui.test.mjs  panel_parse_actions.test.mjs  panel_patch_core.test.mjs  panel_patch_ui.test.mjs  panel_payload.test.mjs  panel_recipes_core.test.mjs  panel_recipes_ui.test.mjs  panel_recorder_core.test.mjs  panel_recorder_ui.test.mjs  panel_sync.test.mjs  panel_tests_core.test.mjs  panel_tests_ui.test.mjs  panel_trust_core.test.mjs  panel_trust_ui.test.mjs  panel_visual_core.test.mjs  panel_visual_ui.test.mjs  panel_workbench.test.mjs  panel_workflow_options.test.mjs  test_cli_demo.py  test_demo_artifact.py  test_safety.py  (+6 more)
(+28 files in other folders)
