[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-devtools"
version = "0.1.0"
description = "Claude Code in Chrome F12 DevTools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude-code", "chrome-extension", "devtools", "web", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Debuggers",
]
dependencies = ["websockets>=12"]

[project.scripts]
cc-devtools = "cc_devtools.server:main"
cc-devtools-path = "cc_devtools.cli:path_cmd"
cc-devtools-demo = "cc_devtools.cli:demo_cmd"

[tool.setuptools.packages.find]
include = ["cc_devtools*"]

[tool.setuptools.package-data]
"cc_devtools" = ["extension/**/*", "skills/**/*", "demo/**/*"]
